--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -1,8 +1,18 @@
 # 你真的懂01背包问题吗？01背包的这几问你能答出来吗？
 
+## 关于01背包的几个问题
+
+- 背包问题的动态转移方程是怎么来的？
+
+- 你能解释背包问题的两个`for`循环的意义嘛？
+- 为什么需要两个`for`循环，一个循环行不行？
+- 01背包问题的`for`循环一定要从0开始吗？
+
+这些问题我们将在本文后续一一进行解答。
+
 ## 01背包问题介绍
 
-有 $N$件物品和一个容量是 $V$ 的背包。每件物品只能使用一次。第$i$件物品的体积是$v_i$，价值是 $w_i$。求解将哪些物品装入背包，可使这些物品的总体积不超过背包容量，且总价值最大。
+有 $N$件物品和一个容量是 $V$ 的背包。每件物品只能使用`一次`。第$i$件物品的体积是$v_i$，价值是 $w_i$。求解将哪些物品装入背包，可使这些物品的总体积不超过背包容量，且总价值最大。
 
 比如下面的4个物品，背包能够承受的最大重量为5，我们应该如何选择，使得我们获得的总价值最大：
 
@@ -14,3 +24,19 @@
 | D    | 4    | 5    |
 
 这个问题还是比较简单，我们直接看就知道选择物品B和物品C得到的价值最大。那么我们如何设计一个算法去实现这个问题呢？首先对于每一个物品都有两种情况，选择和不选择，我们需要选择两种情况当中能够获取最大价值的那种情况。
+
+## 01背包问题分析
+
+首先我么先要确定一个信息就是没件物品只有一件，选完就没有了。如果我们的背包当中还有剩余容量可以放下某个物品，那么对于这个物品我们就有两种选择：`选`或者`不选`。
+
+我们定义数组`dp[i][j]`，其含义是对于前`i`件物品，在我们的背包容量为`j`的情况下我们能够获得的最大的收益。那么我们可以得到下面的公式：
+$$
+dp[i][j]=\left\{
+\begin{aligned}
+max(dp[i - 1][j - w] + v, dp[i - 1][j])，如果背包的容量大于等于物品 i 占的体积\\
+dp[i - 1][j]，如果背包的容量小于物品 i 占的体积
+\end{aligned}
+\right.
+$$
+
+
