--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -31,12 +31,10 @@
 
 我们定义数组`dp[i][j]`，其含义是对于前`i`件物品，在我们的背包容量为`j`的情况下我们能够获得的最大的收益。那么我们可以得到下面的公式：
 $$
-dp[i][j]=\left\{
-\begin{aligned}
+dp[i][j]=\begin{cases}
 max(dp[i - 1][j - w] + v, dp[i - 1][j])，如果背包的容量大于等于物品 i 占的体积\\
 dp[i - 1][j]，如果背包的容量小于物品 i 占的体积
-\end{aligned}
-\right.
+\end{cases}
 $$
 
 
