--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -31,9 +31,17 @@
 
 我们定义数组`dp[i][j]`，其含义是对于前`i`件物品，在我们的背包容量为`j`的情况下我们能够获得的最大的收益。那么我们可以得到下面的公式：
 $$
-dp[i][j]=max(dp[i - 1][j - w] + v, dp[i - 1][j])，如果背包的容量大于等于物品 i 占的体积
+dp[i][j]=max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])，如果背包的容量大于等于物品 i 占的体积
 $$
 
 $$
 dp[i][j]=dp[i - 1][j]，如果背包的容量小于物品 i 占的体积
 $$
+
+- 第一种情况（背包容量大于等于第`i`件物品的体积`v[i]`时）：
+  -  在这种情况下我们对于第`i`件物品有两种选择，一种是将其放入背包当中，另外一种就是不选他，那么我们就可以使用容量为`j`的背包在前`i-1`件物品进行选择。
+  - 如果我们选第`i`件物品，那么我们背包剩下的容量就为`j - v[i]`，我们还能选择的物品就是前`i - 1`个物品，这个情况下能够获得的最大的收益为$dp[i - 1][j - v[i]]$，再加上我们选择的第`i`件物品的价值，我们选择第`i`件物品能够获得的总收益为`dp[i - 1][j - v[i]] + w[i]`。
+  - 如果我们不选择第`i`件物品，那么我们背包剩余容量仍然为`j`，而且我们只能从前`i`个商品当中进行选择，那么我们最大的收益就为`dp[i - 1][j]`。
+- 第二种情况（背包容量小于第`i`件物品的体积`v[i]`时）：
+  - 这种情况下我们只能够选择前`i`个商品，因此我们能够获取的最大收益为`dp[i - 1][j]`。
+
