--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -25,7 +25,7 @@
 
 这个问题还是比较简单，我们直接看就知道选择物品B和物品C得到的价值最大。那么我们如何设计一个算法去实现这个问题呢？首先对于每一个物品都有两种情况，选择和不选择，我们需要选择两种情况当中能够获取最大价值的那种情况。
 
-## 01背包问题分析
+## 01背包问题动态转移方程
 
 首先我么先要确定一个信息就是没件物品只有一件，选完就没有了。如果我们的背包当中还有剩余容量可以放下某个物品，那么对于这个物品我们就有两种选择：`选`或者`不选`。
 
@@ -41,7 +41,9 @@ $$
 - 第一种情况（背包容量大于等于第`i`件物品的体积`v[i]`时）：
   -  在这种情况下我们对于第`i`件物品有两种选择，一种是将其放入背包当中，另外一种就是不选他，那么我们就可以使用容量为`j`的背包在前`i-1`件物品进行选择。
   - 如果我们选第`i`件物品，那么我们背包剩下的容量就为`j - v[i]`，我们还能选择的物品就是前`i - 1`个物品，这个情况下能够获得的最大的收益为$dp[i - 1][j - v[i]]$，再加上我们选择的第`i`件物品的价值，我们选择第`i`件物品能够获得的总收益为`dp[i - 1][j - v[i]] + w[i]`。
-  - 如果我们不选择第`i`件物品，那么我们背包剩余容量仍然为`j`，而且我们只能从前`i`个商品当中进行选择，那么我们最大的收益就为`dp[i - 1][j]`。
+  - 如果我们不选择第`i`件物品，那么我们背包剩余容量仍然为`j`，而且我们只能从前`i - 1` 个商品当中进行选择，那么我们最大的收益就为`dp[i - 1][j]`。
 - 第二种情况（背包容量小于第`i`件物品的体积`v[i]`时）：
-  - 这种情况下我们只能够选择前`i`个商品，因此我们能够获取的最大收益为`dp[i - 1][j]`。
+  - 这种情况下我们只能够选择前`i - 1`个商品，因此我们能够获取的最大收益为`dp[i - 1][j]`。
+
+## 01背包数据依赖问题分析
 
