--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -29,7 +29,7 @@
 
 首先我么先要确定一个信息就是没件物品只有一件，选完就没有了。如果我们的背包当中还有剩余容量可以放下某个物品，那么对于这个物品我们就有两种选择：`选`或者`不选`。
 
-我们定义数组`dp[i][j]`，其含义是对于前`i`件物品，在我们的背包容量为`j`的情况下我们能够获得的最大的收益。那么我们可以得到下面的公式：
+我们定义数组`dp[i][j]`，其含义是对于前`i`件物品，在我们的背包容量为`j`的情况下我们能够获得的最大的收益，如果我们有`N`件物品，背包容量为`V`，那么我们能够获得的最大价值为`dp[N][V]`，因为他表示的是对于前`N`个物品，在背包容量为`V`的情况下我们能够获取到的最大的价值。我们可以得到下面的公式：
 $$
 dp[i][j]=max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])，如果背包的容量大于等于物品 i 占的体积
 $$
@@ -47,3 +47,15 @@ $$
 
 ## 01背包数据依赖问题分析
 
+在上文当中我们已经分析出来了我们的动态转移方程：
+$$
+dp[i][j]=max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])，如果背包的容量大于等于物品 i 占的体积
+$$
+
+$$
+dp[i][j]=dp[i - 1][j]，如果背包的容量小于物品 i 占的体积
+$$
+
+根据上面两个公式分析，我们知道要想解出`dp[i][j]`的值，我们首先需要知道`dp[i - 1][j - v[i]]`的值和`dp[i - 1][j]`的值，他们之间的依赖关系如下图所示：
+
+<img src="../images/dsal/dp/01-dp21.png" alt="01-dp01" style="zoom:100%;" />
