--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -7,6 +7,8 @@
 - 你能解释背包问题的两个`for`循环的意义嘛？
 - 为什么需要两个`for`循环，一个循环行不行？
 - 01背包问题的`for`循环一定要从0开始吗？
+- 01背包滚动数组的优化原理是什么？
+- 01背包只用不用二维数组只用一位数组的依据是什么？
 
 这些问题我们将在本文后续一一进行解答。
 
@@ -59,3 +61,49 @@ $$
 根据上面两个公式分析，我们知道要想解出`dp[i][j]`的值，我们首先需要知道`dp[i - 1][j - v[i]]`的值和`dp[i - 1][j]`的值，他们之间的依赖关系如下图所示：
 
 <img src="../images/dsal/dp/01-dp21.png" alt="01-dp01" style="zoom:100%;" />
+
+基于上面的数据依赖关系，我们知道我们如果想求`dp[N][V]`的值，首先要求出`dp`数组第`N - 1`行的所有的值，因为`dp[N][V]`依赖`dp[N - 1][V]`，而且可能依赖`dp[N - 1][i]`的值（`i`大于等于`0`，小于`V`），而`dp[N - 1][V]`又依赖`dp[N - 2][]V`......
+
+根据上面的分析过程，如果我们想计算出`dp[N][V]`的结果，那就需要从第`0`行开始往后计算，一直算到第`N`行，因此我们可以写出下面的代码：
+
+```c++
+
+#include <iostream>
+using namespace std;
+
+#define L 20000
+int w[L]; // 物品价值
+int v[L]; // 物品体积
+int dp[L][L];
+
+int N; // 物品数量
+int V; // 背包的体积
+
+int backpack() {
+
+	// 初始化
+	for (int i = v[1]; i <= V; ++i) {
+		dp[1][i] = w[1];
+	}
+	// 第一行已经初始化 从第二行开始
+	for (int i = 2; i <= N; ++i) {
+		for (int j = 0; j <= V; ++j) {
+			if (j >= v[i])
+				dp[i][j] = max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]);
+			else
+				dp[i][j] = dp[i - 1][j];
+		}
+	}
+	return dp[N][V];
+}
+
+int main() {
+	cin >> N >> V;
+	for (int i = 1; i <= N; ++i) {
+		cin >> v[i] >> w[i];
+	}
+	cout << backpack();
+	return 0;
+}
+```
+
