--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -66,6 +66,50 @@ $$
 
 根据上面的分析过程，如果我们想计算出`dp[N][V]`的结果，那就需要从第`0`行开始往后计算，一直算到第`N`行，因此我们可以写出下面的代码：
 
+`Java`版本：
+
+```java
+
+import java.util.Scanner;
+
+public class Main {
+
+  public static int backpack(int[] w, int[] v, int N, int V) {
+    int[][] dp = new int[N + 1][V + 1];
+    // 初始化
+    for (int i = v[1]; i <= V; ++i) {
+      dp[1][i] = w[1];
+    }
+    // 第一行已经初始化 从第二行开始
+    for (int i = 2; i <= N; ++i) {
+      for (int j = 0; j <= V; ++j) {
+        if (j >= v[i])
+          dp[i][j] = Math.max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]);
+        else
+          dp[i][j] = dp[i - 1][j];
+      }
+    }
+    return dp[N][V];
+  }
+
+  public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int N = scanner.nextInt();
+    int V = scanner.nextInt();
+    int[] w = new int[N + 1];
+    int[] v = new int[N + 1];
+    for (int i = 1; i <= N; i++) {
+      v[i] = scanner.nextInt();
+      w[i] = scanner.nextInt();
+    }
+    System.out.println(backpack(w, v, N, V));
+  }
+}
+
+```
+
+`C++`版本：
+
 ```c++
 
 #include <iostream>
