--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -149,5 +149,153 @@ int main() {
 	cout << backpack();
 	return 0;
 }
+
 ```
+
+<img src="../images/dsal/dp/01-dp22.png" alt="01-dp01" style="zoom:100%;" />
+
+从上图看我们在计算第`i`的数据的时候我们只依赖第`i - 1`行，我们在第`i`行从后往前遍历并不会破坏动态转移公式的要求。
+
+因此下面的代码也是正确的：
+
+```java
+public static int backpack(int[] w, int[] v, int N, int V) {
+    int[][] dp = new int[N + 1][V + 1];
+    // 初始化
+    for (int i = v[1]; i <= V; ++i) {
+        dp[1][i] = w[1];
+    }
+    // 第一行已经初始化 从第二行开始
+    for (int i = 2; i <= N; ++i) {
+        for (int j = V; j >= 0; --j) {
+            if (j >= v[i])
+                dp[i][j] = Math.max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]);
+            else
+                dp[i][j] = dp[i - 1][j];
+        }
+    }
+    return dp[N][V];
+}
+```
+
+## 01背包问题优化——滚动数组
+
+我们在解决背包问的时候我们是开辟了一个二维数组`dp`，那么我们能不能想斐波拉契数列那样降低算法的空间复杂度呢？我们已经很清楚了我们在计算`dp`数据的时候进行计算的时候只使用了两行数据，那么我们只需要申请两行的空间即可，不需要申请那么大的数组空间，计算的时候反复在两行数据当中交替计算既可。比如说我们已经计算好第一行的数据了（初始化），那么我们可以根据第一行得到的结果得到第二行，然后根据第二行，将计算的结结果重新存储到第一行，如此交替反复，像这种方法叫做`滚动数组`。
+
+```java
+import java.util.Scanner;
+
+public class Main {
+    
+    public static int backpack(int[] w, int[] v, int V) {
+      int N = w.length;
+      int[][] dp = new int[2][V + 1];
+
+      // 我们一共有 N 个物品，背包能够承受的重量为 V
+      // dp数组就是我们上面提到的动态规划的数组
+      // w[i] 就是第 i 个物品的重量
+      // v[i] 就是第 i 个物品的价值
+      // 进行数组的初始化
+      for (int i = w[0]; i < V; ++i) {
+        dp[0][i] = v[0];
+      }
+      for (int i = 1; i < N; ++i) {
+        for (int j = V; j >= 0; --j) {
+          if (j >= w[i]) // 只有能够承受物品的重量才能进行选择
+            dp[i % 2][j] = Math.max(dp[(i - 1) % 2][j],
+                dp[(i - 1) % 2][j - w[i]] + v[i]);
+          else
+            dp[i % 2][j] = dp[(i - 1) % 2][j];
+        }
+      }
+      // 返回能够获得的最大的价值
+      // 这个式子表明前 N - 1个
+      return dp[(N - 1) % 2][V];
+  }
+
+  public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int N = scanner.nextInt();
+    int V = scanner.nextInt();
+    int[] w = new int[N];
+    int[] v = new int[N];
+    for (int i = 0; i < N; i++) {
+      w[i] = scanner.nextInt();
+      v[i] = scanner.nextInt();
+    }
+    System.out.println(backpack(w, v, V));
+  }
+}
+```
+
+### 背包空间再优化——单行数组和它的遍历顺序问题
+
+我们还能继续压缩空间吗🤣？我们在进行空间问题的优化的时候只要不破坏动态转移公式，只需要我们进行的优化能够满足`dp[i][j]`的计算在它所依赖的数据之后计算即可。
+
+```java
+import java.util.Scanner;
+
+public class Main {
+
+  public static int backpack(int[] w, int[] v, int V) {
+    int N = w.length;
+    int[] dp = new int[V + 1];
+    // 我们一共有 N 个物品，背包能够承受的重量为 V
+    // dp数组就是我们上面提到的动态规划的数组
+    // w[i] 就是第 i 个物品的重量
+    // v[i] 就是第 i 个物品的价值
+    // 进行数组的初始化
+    for (int i = w[0]; i < V; ++i) {
+      dp[i] = v[0];
+    }
+    for (int i = 1; i < N; ++i) {
+      for (int j = V; j >= w[i]; --j) {
+        dp[j] = Math.max(dp[j - w[i]] + v[i], dp[j]);
+      }
+    }
+    return dp[V];
+  }
+
+  public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int N = scanner.nextInt();
+    int V = scanner.nextInt();
+    int[] w = new int[N];
+    int[] v = new int[N];
+    for (int i = 0; i < N; i++) {
+      w[i] = scanner.nextInt();
+      v[i] = scanner.nextInt();
+    }
+    System.out.println(backpack(w, v, V));
+  }
+}
+```
+
+我们现在来好好分析一下上面的代码：
+
+- 根据动态转移公式`dp[i][j] = max(dp[i - 1][j - w] + v, dp[i - 1][j])`我们知道，第`i`行的数据只依赖第`i - 1`行的前`j`个数据，跟第`j`个数据之后的数据没有关系。因此我们在使用一维数组的时候可以从后往前计算（且只能从后往前计算，如果从前往后计算会破话动态转移公式，因为第`j`个数据跟他前面的数据有依赖关系，跟他后面的数据没有依赖关系）就能够满足我们的动态转移公式。
+
+<img src="../images/dsal/dp/01-dp23.png" alt="01-dp01" style="zoom:100%;" />
+
+- 如果我们从在使用单行数组的时候从前往后计算，那么会使得一维数据前面部分数据的状态从`i - 1`行的状态变成第`i`行的状态，像下面这样。
+
+<img src="../images/dsal/dp/01-dp24.png" alt="01-dp01" style="zoom:100%;" />
+
+但是一维数组当中后部分的数据还是`i - 1`行的状态，当我们去更新他们的时候他们依赖前面部分数据的`i - 1`行的状态，但是他们已经更新到第`i`的状态了，因此破坏了动态规划的转移方程，但是如果我们从后往前进行遍历那么前面的状态始终是第`i - 1`行的状态，因此没有破坏动态规划的转移方程，因此我们需要从后往前遍历。
+
+<img src="../images/dsal/dp/01-dp25.png" alt="01-dp01" style="zoom:100%;" />
+
+### 动态规划为什么叫动态规划
+
+学习完以上两个问题之后我们可以通过动态规划的特点去找到这个答案。首先我们需要明白什么是`规划`所谓的`规划 `就是寻找最优值的过程，比如说我们在旅行的时候做规划就是为了又更好旅行体验，而我们在做算法题的时候需要找到最好的结果，比如在背包问题当中我们要找到价值最大的一种选择，这也是一种规划，那为什么是动态的呢？所谓动态就是我们在寻找最优值的过程当中，选择是变化的。比如说对于背包问题的公式`dp[i][j] = max(dp[i - 1][j - w] + v, dp[i - 1][j])`我们在计算出结果之前并不知道那种选择好，因为我们要选择两者中间值较大的哪个选择，这就是动态选择的过程！！！
+
+---
+
+以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！
+
+更多容器设计的内容在项目<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：一无是处的研究僧，了解更多计算机知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
 
