--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -64,7 +64,7 @@ $$
 
 基于上面的数据依赖关系，我们知道我们如果想求`dp[N][V]`的值，首先要求出`dp`数组第`N - 1`行的所有的值，因为`dp[N][V]`依赖`dp[N - 1][V]`，而且可能依赖`dp[N - 1][i]`的值（`i`大于等于`0`，小于`V`），而`dp[N - 1][V]`又依赖`dp[N - 2][]V`......
 
-根据上面的分析过程，如果我们想计算出`dp[N][V]`的结果，那就需要从第`0`行开始往后计算，一直算到第`N`行，因此我们可以写出下面的代码：
+根据上面的分析过程，如果我们想计算出`dp[N][V]`的结果，那就需要从第`1`行开始往后计算，一直算到第`N`行，因此我们可以写出下面的代码：
 
 `Java`版本：
 
@@ -167,6 +167,8 @@ public static int backpack(int[] w, int[] v, int N, int V) {
     }
     // 第一行已经初始化 从第二行开始
     for (int i = 2; i <= N; ++i) {
+        // 这里是从末尾到0
+        // 前面是从0遍历到末尾
         for (int j = V; j >= 0; --j) {
             if (j >= v[i])
                 dp[i][j] = Math.max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]);
@@ -182,36 +184,32 @@ public static int backpack(int[] w, int[] v, int N, int V) {
 
 我们在解决背包问的时候我们是开辟了一个二维数组`dp`，那么我们能不能想斐波拉契数列那样降低算法的空间复杂度呢？我们已经很清楚了我们在计算`dp`数据的时候进行计算的时候只使用了两行数据，那么我们只需要申请两行的空间即可，不需要申请那么大的数组空间，计算的时候反复在两行数据当中交替计算既可。比如说我们已经计算好第一行的数据了（初始化），那么我们可以根据第一行得到的结果得到第二行，然后根据第二行，将计算的结结果重新存储到第一行，如此交替反复，像这种方法叫做`滚动数组`。
 
+下面的代码当中`dp`数组是从第0行开始使用的，前面的代码是从第一行开始的。
+
 ```java
 import java.util.Scanner;
 
 public class Main {
-    
-    public static int backpack(int[] w, int[] v, int V) {
+
+
+    public static int backpack(int[] v, int[] w, int V) {
       int N = w.length;
       int[][] dp = new int[2][V + 1];
-
-      // 我们一共有 N 个物品，背包能够承受的重量为 V
-      // dp数组就是我们上面提到的动态规划的数组
-      // w[i] 就是第 i 个物品的重量
-      // v[i] 就是第 i 个物品的价值
-      // 进行数组的初始化
-      for (int i = w[0]; i < V; ++i) {
-        dp[0][i] = v[0];
+      for (int i = v[0]; i < V; ++i) {
+        dp[0][i] = w[0];
       }
       for (int i = 1; i < N; ++i) {
         for (int j = V; j >= 0; --j) {
-          if (j >= w[i]) // 只有能够承受物品的重量才能进行选择
+          if (j >= v[i])
             dp[i % 2][j] = Math.max(dp[(i - 1) % 2][j],
-                dp[(i - 1) % 2][j - w[i]] + v[i]);
+                dp[(i - 1) % 2][j - v[i]] + w[i]);
           else
             dp[i % 2][j] = dp[(i - 1) % 2][j];
         }
       }
-      // 返回能够获得的最大的价值
-      // 这个式子表明前 N - 1个
       return dp[(N - 1) % 2][V];
   }
+
 
   public static void main(String[] args) {
     Scanner scanner = new Scanner(System.in);
@@ -220,15 +218,15 @@ public class Main {
     int[] w = new int[N];
     int[] v = new int[N];
     for (int i = 0; i < N; i++) {
-      w[i] = scanner.nextInt();
       v[i] = scanner.nextInt();
+      w[i] = scanner.nextInt();
     }
-    System.out.println(backpack(w, v, V));
+    System.out.println(backpack(v, w, V));
   }
 }
 ```
 
-### 背包空间再优化——单行数组和它的遍历顺序问题
+## 背包空间再优化——单行数组和它的遍历顺序问题
 
 我们还能继续压缩空间吗🤣？我们在进行空间问题的优化的时候只要不破坏动态转移公式，只需要我们进行的优化能够满足`dp[i][j]`的计算在它所依赖的数据之后计算即可。
 
@@ -237,20 +235,15 @@ import java.util.Scanner;
 
 public class Main {
 
-  public static int backpack(int[] w, int[] v, int V) {
+  public static int backpack(int[] v, int[] w, int V) {
     int N = w.length;
     int[] dp = new int[V + 1];
-    // 我们一共有 N 个物品，背包能够承受的重量为 V
-    // dp数组就是我们上面提到的动态规划的数组
-    // w[i] 就是第 i 个物品的重量
-    // v[i] 就是第 i 个物品的价值
-    // 进行数组的初始化
-    for (int i = w[0]; i < V; ++i) {
-      dp[i] = v[0];
+    for (int i = v[0]; i < V; ++i) {
+      dp[i] = w[0];
     }
     for (int i = 1; i < N; ++i) {
-      for (int j = V; j >= w[i]; --j) {
-        dp[j] = Math.max(dp[j - w[i]] + v[i], dp[j]);
+      for (int j = V; j >= v[i]; --j) {
+        dp[j] = Math.max(dp[j - v[i]] + w[i], dp[j]);
       }
     }
     return dp[V];
@@ -263,17 +256,18 @@ public class Main {
     int[] w = new int[N];
     int[] v = new int[N];
     for (int i = 0; i < N; i++) {
-      w[i] = scanner.nextInt();
       v[i] = scanner.nextInt();
+      w[i] = scanner.nextInt();
     }
-    System.out.println(backpack(w, v, V));
+    System.out.println(backpack(v, w, V));
   }
 }
+
 ```
 
 我们现在来好好分析一下上面的代码：
 
-- 根据动态转移公式`dp[i][j] = max(dp[i - 1][j - w] + v, dp[i - 1][j])`我们知道，第`i`行的数据只依赖第`i - 1`行的前`j`个数据，跟第`j`个数据之后的数据没有关系。因此我们在使用一维数组的时候可以从后往前计算（且只能从后往前计算，如果从前往后计算会破话动态转移公式，因为第`j`个数据跟他前面的数据有依赖关系，跟他后面的数据没有依赖关系）就能够满足我们的动态转移公式。
+- 根据动态转移公式`dp[i][j] = max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])`我们知道，第`i`行的数据只依赖第`i - 1`行的前`j`个数据，跟第`j`个数据之后的数据没有关系。因此我们在使用一维数组的时候可以从后往前计算（且只能从后往前计算，如果从前往后计算会破坏动态转移公式，因为第`j`个数据跟他前面的数据有依赖关系，跟他后面的数据没有依赖关系）就能够满足我们的动态转移公式。
 
 <img src="../images/dsal/dp/01-dp23.png" alt="01-dp01" style="zoom:100%;" />
 
@@ -285,9 +279,13 @@ public class Main {
 
 <img src="../images/dsal/dp/01-dp25.png" alt="01-dp01" style="zoom:100%;" />
 
-### 动态规划为什么叫动态规划
+## 动态规划为什么叫动态规划
 
-学习完以上两个问题之后我们可以通过动态规划的特点去找到这个答案。首先我们需要明白什么是`规划`所谓的`规划 `就是寻找最优值的过程，比如说我们在旅行的时候做规划就是为了又更好旅行体验，而我们在做算法题的时候需要找到最好的结果，比如在背包问题当中我们要找到价值最大的一种选择，这也是一种规划，那为什么是动态的呢？所谓动态就是我们在寻找最优值的过程当中，选择是变化的。比如说对于背包问题的公式`dp[i][j] = max(dp[i - 1][j - w] + v, dp[i - 1][j])`我们在计算出结果之前并不知道那种选择好，因为我们要选择两者中间值较大的哪个选择，这就是动态选择的过程！！！
+首先我们需要明白什么是`规划`所谓的`规划 `就是寻找最优值的过程，比如说我们在旅行的时候做规划就是为了又更好旅行体验，而我们在做算法题的时候需要找到最好的结果，比如在背包问题当中我们要找到价值最大的一种选择，这也是一种规划，那为什么是动态的呢？所谓动态就是我们在寻找最优值的过程当中，选择是变化的。比如说对于背包问题的公式`dp[i][j] = max(dp[i - 1][j - v[i] + w[i], dp[i - 1][j])`我们在计算出结果之前并不知道那种选择好，因为我们要选择两者中间值较大的哪个选择，这就是动态选择的过程！！！
+
+## 问题答案
+
+如果你已经看懂上面所谈论到的内容的话，关于前面的几个问题相信你已经有了答案。上面那些问题最终涉及到的就是01背包问题的动态转移方程了，我们在写代码的时候一定不能破坏动态转移方程，也就是要满足动态转移方程的依赖关系。
 
 ---
 
