--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -10,7 +10,7 @@
 - 01背包滚动数组的优化原理是什么？
 - 01背包只用不用二维数组只用一位数组的依据是什么？
 
-这些问题我们将在本文后续一一进行解答。
+这些问题在阅读完本文之后你将会得到答案！
 
 ## 01背包问题介绍
 
@@ -267,7 +267,7 @@ public class Main {
 
 我们现在来好好分析一下上面的代码：
 
-- 根据动态转移公式`dp[i][j] = max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])`我们知道，第`i`行的数据只依赖第`i - 1`行的前`j`个数据，跟第`j`个数据之后的数据没有关系。因此我们在使用一维数组的时候可以从后往前计算（且只能从后往前计算，如果从前往后计算会破坏动态转移公式，因为第`j`个数据跟他前面的数据有依赖关系，跟他后面的数据没有依赖关系）就能够满足我们的动态转移公式。
+- 根据动态转移公式`dp[i][j] = max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])`我们知道，第`i`行的第`j`个数据只依赖第`i - 1`行的前`j`个数据，跟第`j`个数据之后的数据没有关系。因此我们在使用一维数组的时候可以从后往前计算（且只能从后往前计算，如果从前往后计算会破坏动态转移公式，因为第`j`个数据跟他前面的数据有依赖关系，跟他后面的数据没有依赖关系）就能够满足我们的动态转移公式。
 
 <img src="../images/dsal/dp/01-dp23.png" alt="01-dp01" style="zoom:100%;" />
 
@@ -279,21 +279,27 @@ public class Main {
 
 <img src="../images/dsal/dp/01-dp25.png" alt="01-dp01" style="zoom:100%;" />
 
-## 动态规划为什么叫动态规划
-
-首先我们需要明白什么是`规划`所谓的`规划 `就是寻找最优值的过程，比如说我们在旅行的时候做规划就是为了又更好旅行体验，而我们在做算法题的时候需要找到最好的结果，比如在背包问题当中我们要找到价值最大的一种选择，这也是一种规划，那为什么是动态的呢？所谓动态就是我们在寻找最优值的过程当中，选择是变化的。比如说对于背包问题的公式`dp[i][j] = max(dp[i - 1][j - v[i] + w[i], dp[i - 1][j])`我们在计算出结果之前并不知道那种选择好，因为我们要选择两者中间值较大的哪个选择，这就是动态选择的过程！！！
-
 ## 问题答案
 
-如果你已经看懂上面所谈论到的内容的话，关于前面的几个问题相信你已经有了答案。上面那些问题最终涉及到的就是01背包问题的动态转移方程了，我们在写代码的时候一定不能破坏动态转移方程，也就是要满足动态转移方程的依赖关系。
+如果你已经看懂上面所谈论到的内容的话，关于前面的几个问题相信你已经有了答案。上面那些问题最终涉及到的就是01背包问题的动态转移方程了，我们在写代码的时候一定不能破坏动态转移方程，也就是要满足动态转移方程的依赖关系，即第`i`行的第`j`个数据只依赖第`i - 1`行的前`j`个数据，跟第`j`个数据之后的数据没有关系。
+
+- 背包问题的两个`for`循环的意义：
+  - 因为我们需要解出`dp`数组当中第`N`行第`V`列的数据，所以我们需要解出二维数组当中所有的数据，因此我们需要进行二维数组的遍历，进行一维遍历不行。
+- 01背包问题的`for`循环一定要从0开始吗？
+  - 不一定，我们只需要满足动态转移方程的数据依赖要求就行，不管是从前往后还是从后往前我们在使用二维`dp`数组的遍历的时候都可以满足数据依赖的要求。但是我们如果使用一维数组的时候就一定要从后往前遍历，因为如果从前往后遍历，第`i`行状态会覆盖第`i - 1`行的状态，而数组后面的数据需要`i - 1`行状态的数据，而它有被覆盖了因此不行。
+- 其余问题的答案在阅读完本文之后相信你心里已经很清楚了！！！
+
+## 动态规划为什么叫动态规划
+
+首先我们需要明白什么是`规划`所谓的`规划 `就是寻找最优值的过程，比如说我们在旅行的时候做规划就是为了又更好旅行体验，而我们在做算法题的时候需要找到最好的结果，比如在背包问题当中我们要找到价值最大的一种选择，这也是一种规划，那为什么是动态的呢？所谓动态就是我们在寻找最优值的过程当中，选择是变化的。比如说对于背包问题的公式`dp[i][j] = max(dp[i - 1][j - v[i] + w[i], dp[i - 1][j])`我们在计算出结果之前并不知道那种选择好，因为我们要选择两者中间值较大的哪个选择，这就是动态选择的过程！所以动态规划被称作动态规划！
 
 ---
 
 以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！
 
-更多容器设计的内容在项目<https://github.com/Chang-LeHung/CSCore>
+更多精彩内容合集课访问项目：<https://github.com/Chang-LeHung/CSCore>
 
-关注公众号：一无是处的研究僧，了解更多计算机知识。
+关注公众号：一无是处的研究僧，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
 
 ![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
 
