--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -293,9 +293,11 @@ public class Main {
 
 首先我们需要明白什么是`规划`所谓的`规划 `就是寻找最优值的过程，比如说我们在旅行的时候做规划就是为了又更好旅行体验，而我们在做算法题的时候需要找到最好的结果，比如在背包问题当中我们要找到价值最大的一种选择，这也是一种规划，那为什么是动态的呢？所谓动态就是我们在寻找最优值的过程当中，选择是变化的。比如说对于背包问题的公式`dp[i][j] = max(dp[i - 1][j - v[i] + w[i], dp[i - 1][j])`我们在计算出结果之前并不知道那种选择好，因为我们要选择两者中间值较大的哪个选择，这就是动态选择的过程！所以动态规划被称作动态规划！
 
----
+## 总结
 
-以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！
+本篇文章主要带大家从0开始剖析01背包问题，主要分享一些基本但经常被忽略的问题，比如f二重循环是如何被写出来的，for循环的顺序问题，数组空间优化问题的原理，用一维数组解决01背包问题！希望大家有所收获，我是LeHung，我们下期再见！！！
+
+---
 
 更多精彩内容合集课访问项目：<https://github.com/Chang-LeHung/CSCore>
 
