--- a/datastructr&algorithm/02-01背包问题.md
+++ b/datastructr&algorithm/02-01背包问题.md
@@ -295,7 +295,7 @@ public class Main {
 
 ## 总结
 
-本篇文章主要带大家从0开始剖析01背包问题，主要分享一些基本但经常被忽略的问题，比如f二重循环是如何被写出来的，for循环的顺序问题，数组空间优化问题的原理，用一维数组解决01背包问题！希望大家有所收获，我是LeHung，我们下期再见！！！
+本篇文章主要带大家从0开始剖析01背包问题，主要分享一些基本但经常被忽略的问题，比如二重循环是如何被写出来的，for循环的顺序问题，数组空间优化问题的原理，用一维数组解决01背包问题！希望大家有所收获，我是LeHung，我们下期再见！！！
 
 ---
 
