add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -4,5 +4,16 @@
 
 >有$N$种物品和一个容量是 $V$的背包，每种物品都有**无限件可用**。第$i$ 种物品的体积是 $v_i$，价值是$w_i$。求解将哪些物品装入背包，可使这些物品的总体积不超过背包容量，且总价值最大。
 
-完全背包问题和01背包的唯一区别就在于物品的个数，咋01背包当中所有的物品只有一件，也就只能使用一次。而在完全背包当中物品可以使用无限多次。
+完全背包问题和01背包的唯一区别就在于物品的个数，在01背包当中所有的物品只有一件，也就只能使用一次。而在完全背包当中物品可以使用无限多次。
+
+## 完全背包问题分析
+
+在01背包问题当中，我们是使用一个二维数组`dp[i][j]`进行计算，`dp[i][j]`表示在只使用前`i`个物品且背包容量为`j`的情况下，我们能够获得的最大的收益。在这个情况下，我们根据当前背包容量`j`判断是否能装入第`i`个物品可以得到下面两个方程。
+$$
+dp[i][j] = \begin{cases}
+max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]\\
+dp[i - 1][j] , j \lt v[i]
+\end{cases}
+$$
+
 
