add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -43,3 +43,9 @@ $$
 
 ## 代码分析
 
+根据对动态转移方程的分析，我们可以知道，我们在计算`dp[i][j]`这个数据的值的时候，我们首先需要将`dp[i][j - v[i]]`和`dp[i - 1][j])`的结果计算出来，因为`dp[i][j]`依赖这两个数据。
+
+<img src="../images/dsal/dp/01-dp26.png" alt="01-dp01" style="zoom:100%;" />
+
+
+
