add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -6,6 +6,19 @@
 
 完全背包问题和01背包的唯一区别就在于物品的个数，在01背包当中所有的物品只有一件，也就只能使用一次。而在完全背包当中物品可以使用无限多次。
 
+比如下面的4个物品，背包能够承受的最大重量为5，我们应该如何选择，使得我们获得的总价值最大：
+
+| 物品 | 重量 | 价值 |
+| ---- | ---- | ---- |
+| A    | 1    | 2    |
+| B    | 2    | 4    |
+| C    | 3    | 4    |
+| D    | 4    | 5    |
+
+这个问题还是比较简单，我们直接从图中看，我们可以选择
+
+## 01背包问题动态
+
 ## 完全背包问题分析
 
 ### 01背包动态转移方程分析
@@ -46,6 +59,68 @@ $$
 根据对动态转移方程的分析，我们可以知道，我们在计算`dp[i][j]`这个数据的值的时候，我们首先需要将`dp[i][j - v[i]]`和`dp[i - 1][j])`的结果计算出来，因为`dp[i][j]`依赖这两个数据。
 
 <img src="../images/dsal/dp/01-dp26.png" alt="01-dp01" style="zoom:100%;" />
+
+根据上面的分析和图我们知道，在计算`dp[i][j]`之前，我们需要将第`i`行第`j`列之前的数据和`dp[i - 1][j]`都计算出来，因为`dp[i][j]`依赖这些数据。而我们最终需要的结果是`dp[N][V]`表示在背包容量为`V`且能够前`N`个物品（也就是所以物品）能够获得的最大的收益。
+
+因此基于以上分析，我们要想最终解出`dp[N][V]`的值，我们可以采取两重`for`循环，第一重循环遍历物品，第二重循环遍历容量，那么我么的代码可以写成下面这样：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAX_LEN 1001
+
+int w[MAX_LEN];
+int v[MAX_LEN];
+int dp[MAX_LEN][MAX_LEN];
+// path 表示动态转移方程的选择类别
+// 如果转移方向为 dp[i][j - v[i]] + w[i] 用箭头←表示
+// 如果转移方向为 dp[i - 1][j] 用箭头↑表示
+string path[MAX_LEN][MAX_LEN] = {""};
+int N, V;
+
+int backpack() {
+	for (int i = v[0]; i <= V; ++i) {
+		dp[0][i] = max(dp[0][i], dp[0][i - v[0]] + w[0]);
+		path[0][i] = "←";
+	}
+	for (int i = 1; i < N; ++i) {
+		for (int j = 0; j <= V; ++j) {
+			if (j >= v[i]) {
+				if (dp[i - 1][j] > (dp[i][j - v[i]] + w[i])) {
+					dp[i][j] = dp[i - 1][j];
+					path[i][j] = "↑";
+				}else {
+					dp[i][j] = dp[i][j - v[i]] + w[i];
+					path[i][j] = "←";
+				}
+			}
+			else {
+				dp[i][j] = dp[i - 1][j];
+				path[i][j] = "↑";
+			}
+		}
+	}
+	return dp[N - 1][V];
+}
+
+int main() {
+
+	cin >> N >> V;
+	for (int i = 0; i < N; ++i) {
+		cin >> v[i] >> w[i];
+	}
+	cout << backpack() << endl;
+	for (int i = 0; i < N; ++i) {
+		for (int j = 1; j <= V; ++j) {
+			cout << path[i][j] << " ";
+		}
+		cout << "\n";
+	}
+	return 0;
+}
+
+```
 
 
 
