--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -15,9 +15,7 @@
 | C    | 3    | 4    |
 | D    | 4    | 5    |
 
-这个问题还是比较简单，我们直接从图中看，我们可以选择
-
-## 01背包问题动态
+这个问题还是比较简单，我们直接从图中看，我们可以选择五个`A`或者两个`B`一个`A`，可以产生最大的收益，最大收益为10。
 
 ## 完全背包问题分析
 
@@ -85,38 +83,38 @@ int backpack() {
 		path[0][i] = "←";
 	}
 	for (int i = 1; i < N; ++i) {
-		for (int j = 0; j <= V; ++j) {
-			if (j >= v[i]) {
-				if (dp[i - 1][j] > (dp[i][j - v[i]] + w[i])) {
-					dp[i][j] = dp[i - 1][j];
-					path[i][j] = "↑";
-				}else {
-					dp[i][j] = dp[i][j - v[i]] + w[i];
-					path[i][j] = "←";
-				}
-			}
-			else {
-				dp[i][j] = dp[i - 1][j];
-				path[i][j] = "↑";
-			}
-		}
+        for (int j = 0; j <= V; ++j) {
+            if (j >= v[i]) {
+                if (dp[i - 1][j] > (dp[i][j - v[i]] + w[i])) {
+                    dp[i][j] = dp[i - 1][j];
+                    path[i][j] = "↑";
+                }else {
+                    dp[i][j] = dp[i][j - v[i]] + w[i];
+                    path[i][j] = "←";
+                }
+            }
+            else {
+                dp[i][j] = dp[i - 1][j];
+                path[i][j] = "↑";
+            }
+        }
 	}
 	return dp[N - 1][V];
 }
 
 int main() {
 
-	cin >> N >> V;
-	for (int i = 0; i < N; ++i) {
-		cin >> v[i] >> w[i];
-	}
-	cout << backpack() << endl;
-	for (int i = 0; i < N; ++i) {
-		for (int j = 1; j <= V; ++j) {
-			cout << path[i][j] << " ";
-		}
-		cout << "\n";
-	}
+    cin >> N >> V;
+    for (int i = 0; i < N; ++i) {
+        cin >> v[i] >> w[i];
+    }
+    cout << backpack() << endl;
+    for (int i = 0; i < N; ++i) {
+        for (int j = 1; j <= V; ++j) {
+            cout << path[i][j] << " ";
+        }
+        cout << "\n";
+    }
 	return 0;
 }
 
