add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -52,12 +52,106 @@ dp[i - 1][j] , j \lt v[i]
 \end{cases}
 $$
 
-## 代码分析
+## 背包问题代码构成设计
 
 根据对动态转移方程的分析，我们可以知道，我们在计算`dp[i][j]`这个数据的值的时候，我们首先需要将`dp[i][j - v[i]]`和`dp[i - 1][j])`的结果计算出来，因为`dp[i][j]`依赖这两个数据。
 
 <img src="../images/dsal/dp/01-dp26.png" alt="01-dp01" style="zoom:100%;" />
 
-根据上面的分析和图我们知道，在计算`dp[i][j]`之前，我们需要将第`i`行第`j`列之前的数据和`dp[i - 1][j]`都计算出来，因为`dp[i][j]`依赖这些数据。而我们最终需要的结果是`dp[N][V]`表示在背包容量为`V`且能够前`N`个物品（也就是所以物品）能够获得的最大的收益。
+根据上面的分析和图我们知道，在计算`dp[i][j]`之前，我们需要将第`i`行第`j`列之前的数据和`dp[i - 1][j]`都计算出来，因为`dp[i][j]`依赖这些数据。而我们最终需要的结果是`dp[N][V]`表示在背包容量为`V`且能够前`N`个物品（也就是所以物品）能够获得的最大的收益，所以我们最终需要求出`dp[N][V]`的值。
 
-因此基于以上分析，我们要想最终解出`dp[N][V]`的值，我们可以采取两重`for`循环，第一重循环遍历物品，第二重循环遍历容量，但是我们的第`0`行没有前一行，因此我们需要对第`0`行进行初始化。
+因此基于以上分析，我们要想最终解出`dp[N][V]`的值，我们可以采取两重`for`循环，第一重循环遍历物品，第二重循环遍历容量，但是我们的第`0`行没有前一行，因此我们需要对第`0`行进行初始化：
+
+```java
+// 对第0行进行初始化操作
+for (int i = 0; i <= V; ++i) {
+    // 如果只能选择第一个数据，而且能选无数次
+    // 那就将所有的容量都拿来装第一个物品
+    dp[0][i] = i / v[0] * w[0];
+}
+```
+
+根据动态转移方程，我们有下面的代码：
+
+```c++
+for (int i = 1; i < N; ++i) {
+    for (int j = 0; j <= V; ++j) {
+        if (j >= v[i]) {
+            dp[i][j] = max(dp[i - 1][j], dp[i][j - v[i]] + w[i]);
+        }
+        else {
+            dp[i][j] = dp[i - 1][j];
+        }
+    }
+}
+```
+
+`C++`完整代码如下：
+
+```c++
+#include <iostream>
+using namespace std;
+#define MAX_LEN 10000
+
+int w[MAX_LEN];
+int v[MAX_LEN];
+int dp[MAX_LEN][MAX_LEN];
+int N, V;
+
+int backpack() {
+	// 对第0行进行初始化操作
+	for (int i = 0; i <= V; ++i) {
+		// 如果只能选择第一个数据，而且能选无数次
+		// 那就将所有的容量都哪来装第一个物品
+		dp[0][i] = i / v[0] * w[0];
+	}
+	for (int i = 1; i < N; ++i) {
+		for (int j = 0; j <= V; ++j) {
+			if (j >= v[i]) {
+				dp[i][j] = max(dp[i - 1][j], dp[i][j - v[i]] + w[i]);
+			}
+			else {
+				dp[i][j] = dp[i - 1][j];
+			}
+		}
+	}
+	return dp[N - 1][V];
+}
+```
+
+`java`代码如下：
+
+```java
+public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int N = scanner.nextInt();
+    int V = scanner.nextInt();
+    int[] w = new int[N];
+    int[] v = new int[N];
+    int[][] dp = new int[N][V + 1];
+    for (int i = 0; i < N; i++) {
+        v[i] = scanner.nextInt();
+        w[i] = scanner.nextInt();
+    }
+
+    // 对第0行进行初始化操作
+    for (int i = 0; i <= V; ++i) {
+        // 如果只能选择第一个数据，而且能选无数次
+        // 那就将所有的容量都哪来装第一个物品
+        dp[0][i] = i / v[0] * w[0];
+    }
+
+    for (int i = 1; i < N; ++i) {
+        for (int j = 0; j <= V; ++j) {
+            if (j >= v[i]) {
+                dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - v[i]] + w[i]);
+            }
+            else {
+                dp[i][j] = dp[i - 1][j];
+            }
+        }
+    }
+    System.out.println(dp[N - 1][V]);
+}
+```
+
