add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -155,3 +155,46 @@ public static void main(String[] args) {
 }
 ```
 
+## 完全背包数组优化
+
+在前面的内容当中我们已经仔细分析了完全背包问题的动态转移方程，我们发现在两层循环的内层循环当中，必须从`0`遍历到`V`，因为我们后面的数据依赖前面的数据，还有就是依赖上一行相同列的数据，因此我们可以使用一行数组去进行遍历即可，这个单行数组与多行数组的区别是多行数组每一行有每一行的状态，但是他有所有行的状态，单行数组只存在一行的状态，但是他会经历所有行的状态，也就是在外层`for`循环下单行数组的状态不断更新。
+
+<img src="../images/dsal/dp/01-dp30.png" alt="01-dp01" style="zoom:100%;" />
+
+我们用一行数组的代码如下：
+
+```java
+public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int N = scanner.nextInt();
+    int V = scanner.nextInt();
+    int[] w = new int[N];
+    int[] v = new int[N];
+    int[] dp = new int[V + 1];
+
+    for (int i = 0; i < N; i++) {
+        v[i] = scanner.nextInt();
+        w[i] = scanner.nextInt();
+    }
+
+    for (int i = 0; i < N; i++) {
+        for (int j = v[i]; j <= V; j++) {
+            dp[j] = Math.max(dp[j], dp[j - v[i]] + w[i]);
+        }
+    }
+    System.out.println(dp[V]);
+}
+```
+
+
+
+## 总结
+
+我们可以总结一下动态规划的套路：
+
+- 分析问题设置`dp`数组并分析数组的含义。
+- 寻找动态转移方程。
+- 初始化数组。
+- 进行数组`dp`求解。
+- 分析动态转移方程的含义，分析是否能够优化数组空间。
+
