--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -163,6 +163,8 @@ public static void main(String[] args) {
 
 我们用一行数组的代码如下：
 
+`java`代码：
+
 ```java
 public static void main(String[] args) {
     Scanner scanner = new Scanner(System.in);
@@ -183,6 +185,38 @@ public static void main(String[] args) {
         }
     }
     System.out.println(dp[V]);
+}
+```
+
+`C++`代码：
+
+```c++
+#include <iostream>
+using namespace std;
+#define MAX_LEN 10000
+
+int w[MAX_LEN];
+int v[MAX_LEN];
+int dp[MAX_LEN]
+int N, V;
+
+int backpack() {
+	for (int i = 0; i < N; ++i) {
+		for (int j = v[i]; j <= V; ++j) {
+			dp[j] = max(dp[j], dp[j - v[i]] + w[i]);
+		}
+	}
+	return dp[V];
+}
+
+int main() {
+
+	cin >> N >> V;
+	for (int i = 0; i < N; ++i) {
+		cin >> v[i] >> w[i];
+	}
+	cout << backpack();
+	return 0;
 }
 ```
 
