add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -220,15 +220,25 @@ int main() {
 }
 ```
 
-
-
 ## 总结
 
-我们可以总结一下动态规划的套路：
+在仔细分析完完全背包问题之后，我们可以总结一下动态规划的套路：
 
 - 分析问题设置`dp`数组并分析数组的含义。
-- 寻找动态转移方程。
+- 寻找动态转移方程，分析`dp`数组当中数据之间的依赖关系，我们在迭代的时候一定要遵循这个关系。
 - 初始化数组。
 - 进行数组`dp`求解。
-- 分析动态转移方程的含义，分析是否能够优化数组空间。
+- 分析动态转移方程的含义和数据依赖关系，分析是否能够在不破坏数据依赖关系的条件下，优化数组空间。
+
+其实上面的套路对于大多数动态规划的题目都有用的，因为动态规划的流程基本一致，而动态规划最难的地方就是第一步了，通过分析问题寻找动态转移方程。
+
+以上就是本篇文章的所有内容了，希望大家有所收获，我是LeHung，我们下期再见！！！
+
+---
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：一无是处的研究僧，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
 
