add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -163,7 +163,7 @@ public static void main(String[] args) {
 
 下面我们举个例子：
 
-假如我们正在更新`dp[j]`，此时`dp[j]`还是第`i-1`行的状态而`dp[0]`到`dp[j-1]`已经是第`i`行的状态了，因为我们是从前到后进行遍历。而要计算`dp[j]`的第i行状态的结果，那么他需要`dp[0]`到`dp[j-1]`的第i行状态的数据，`dp[j]`的第`i-1`行状态的数据。
+假如我们正在更新`dp[j]`，此时`dp[j]`还是第`i-1`行的状态而`dp[0]`到`dp[j-1]`已经是第`i`行的状态了，因为我们是从前到后进行遍历。而要计算`dp[j]`的第i行状态的结果，那么他需要`dp[0]`到`dp[j-1]`的第i行状态的数据，`dp[j]`的第`i-1`行状态的数据，而实际情况数组能够满足这种依赖关系，因此我们可以使用单行数组优化。
 
 <img src="../images/dsal/dp/01-dp31.png" alt="01-dp01" style="zoom:100%;" />
 
