add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -1,5 +1,7 @@
 # 面试官：完全背包都不会，是你自己走还是我送你？
 
+在如今的面试当中算法题已经成为面试不可或缺的内容，今天就跟大家分享一个还比较困难的笔试题——完全背包。
+
 ## 完全背包问题
 
 >有$N$种物品和一个容量是 $V$的背包，每种物品都有**无限件可用**。第$i$ 种物品的体积是 $v_i$，价值是$w_i$。求解将哪些物品装入背包，可使这些物品的总体积不超过背包容量，且总价值最大。
@@ -157,21 +159,11 @@ public static void main(String[] args) {
 
 ## 完全背包数组优化
 
-在前面的内容当中我们已经仔细分析了完全背包问题的动态转移方程，我们发现在两层循环的内层循环当中，必须从`0`遍历到`V`，因为我们后面的数据依赖同一行前面的数据，还有就是依赖上一行相同列的数据，比如`dp[i][j]`依赖`dp[i][0]`到`dp[i][j - 1]`，还依赖`dp[i - 1][j]`。那么我们如何使用单行数组进行优化呢？
+在前面的内容当中我们已经仔细分析了完全背包问题的动态转移方程，我们发现在两层循环的内层循环当中，必须从`0`遍历到`V`，因为我们后面的数据依赖同一行前面的数据，还有就是依赖上一行相同列的数据，比如`dp[i][j]`依赖`dp[i][0]`到`dp[i][j - 1]`，还依赖`dp[i - 1][j]`，这个其实是可以只用一个数组进行计算的。
 
 <img src="../images/dsal/dp/01-dp30.png" alt="01-dp01" style="zoom:100%;" />
 
-下面我们举个例子：
-
-假如我们正在更新`dp[j]`，此时`dp[j]`还是第`i-1`行的状态而`dp[0]`到`dp[j-1]`已经是第`i`行的状态了，因为我们是从前到后进行遍历。而要计算`dp[j]`的第i行状态的结果，那么他需要`dp[0]`到`dp[j-1]`的第i行状态的数据，`dp[j]`的第`i-1`行状态的数据，而实际情况数组能够满足这种依赖关系，因此我们可以使用单行数组优化。
-
-<img src="../images/dsal/dp/01-dp31.png" alt="01-dp01" style="zoom:100%;" />
-
-这个单行数组与多行数组的区别是多行数组每一行有每一行的状态，但是他有所有行的状态，单行数组只存在一行的状态，但是他会经历所有行的状态，也就是在外层`for`循环下单行数组的状态不断更新。（如果你不理解这段话和上面谈到的单行数组优化，可以先看代码，看完之后再回头看这段话和下图，相信你会理解的更好）
-
-我们用一行数组的代码如下：
-
-`java`代码：
+我们先来看单行完全背包的`Java`代码：
 
 ```java
 public static void main(String[] args) {
@@ -195,6 +187,14 @@ public static void main(String[] args) {
     System.out.println(dp[V]);
 }
 ```
+
+下面我们举个使用单行数组优化的例子：
+
+假如我们正在更新`dp[j]`，此时`dp[j]`还是第`i-1`行的状态而`dp[0]`到`dp[j-1]`已经是第`i`行的状态了，因为我们是从前到后进行遍历。而要计算`dp[j]`的第i行状态的结果，那么他需要`dp[0]`到`dp[j-1]`的第i行状态的数据，`dp[j]`的第`i-1`行状态的数据，而实际情况数组能够满足这种依赖关系，因此我们可以使用单行数组优化。
+
+<img src="../images/dsal/dp/01-dp31.png" alt="01-dp01" style="zoom:100%;" />
+
+这个单行数组与多行数组的区别是多行数组每一行有每一行的状态，但是他有所有行的状态，单行数组只存在一行的状态，但是他会经历所有行的状态，也就是在外层`for`循环下单行数组的状态不断更新。（如果你不理解这段话和上面谈到的单行数组优化，可以先看代码，看完之后再回头看这段话和下图，相信你会理解的更好）
 
 `C++`代码：
 
