add full backpack

--- a/datastructr&algorithm/03完全背包.md
+++ b/datastructr&algorithm/03完全背包.md
@@ -194,7 +194,7 @@ public static void main(String[] args) {
 
 <img src="../images/dsal/dp/01-dp31.png" alt="01-dp01" style="zoom:100%;" />
 
-这个单行数组与多行数组的区别是多行数组每一行有每一行的状态，但是他有所有行的状态，单行数组只存在一行的状态，但是他会经历所有行的状态，也就是在外层`for`循环下单行数组的状态不断更新。（如果你不理解这段话和上面谈到的单行数组优化，可以先看代码，看完之后再回头看这段话和下图，相信你会理解的更好）
+这个单行数组与多行数组的区别是多行数组每一行有每一行的状态，而且他保存了所有行的状态，单行数组只存在一行的状态，但是他会经历所有行的状态，也就是在外层`for`循环下单行数组的状态不断更新。（如果你不理解这段话和上面谈到的单行数组优化，可以结合代码和文字进行理解）
 
 `C++`代码：
 
