--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -1,4 +1,32 @@
 # 深入剖析多重背包问题（上篇）
 
+## 前言
 
+在前面的两篇文章当中，我们已经仔细的讨论了[01背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484416&idx=1&sn=d8aa70bc642c94a127ea67409808980f&chksm=cf0c9809f87b111f2fb092adba83da7e5463a8f5eaa92914ddb975065428a1a80a7d6bc53f3a&token=883596793&lang=zh_CN#rd)和[完全背包问题](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)，在本篇文章当中将给大家介绍另外一种背包问题——**多重背包问题**，多重背包问题的物品数量介于**01背包问题**和**完全背包问题**之间，他的物品的数量是有限个！
+
+## 多重背包问题介绍
+
+>有 $N$ 种物品和一个容量是 $V$ 的背包。第 $i$ 种物品**最多有** $s_i$ 件，每件体积是 $v_i$，价值是 $w_i$。求解将哪些物品装入背包，可使物品体积总和不超过背包容量，且价值总和最大。
+>
+>**注意**：上面使用到的字符含义在本篇文章当中都一样。
+
+多重背包问题跟**01背包**和**完全背包**的区别都是在物品的可用次数上，**01背包**只能使用一次，**多重背包**可用使用无数次，而**多重背包**可用使用多次。
+
+- 01背包的动态转移方程：
+
+$$
+dp[i][j] = \begin{cases}
+max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]\\
+dp[i - 1][j] , j \lt v[i]
+\end{cases}
+$$
+
+- 完全背包的动态转移方程：
+
+$$
+dp[i][j] = \begin{cases}
+max(dp[i][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]\\
+dp[i - 1][j] , j \lt v[i]
+\end{cases}
+$$
 
