--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -12,7 +12,9 @@
 
 多重背包问题跟**01背包**和**完全背包**的区别都是在物品的可用次数上，**01背包**只能使用一次，**多重背包**可用使用无数次，而**多重背包**可用使用多次。
 
-- 01背包的动态转移方程：
+## 背包问题复习
+
+### 01背包的动态转移方程
 
 $$
 dp[i][j] = \begin{cases}
@@ -21,7 +23,9 @@ dp[i - 1][j] , j \lt v[i]
 \end{cases}
 $$
 
-- 完全背包的动态转移方程：
+
+
+### 完全背包的动态转移方程
 
 $$
 dp[i][j] = \begin{cases}
