--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -16,14 +16,19 @@
 
 ### 01背包的动态转移方程
 
+01背包问题当中，我们是使用一个二维数组`dp[i][j]`进行计算，`dp[i][j]`表示在只使用前`i`个物品且背包容量为`j`的情况下，我们能够获得的最大的收益。在这个情况下，我们根据当前背包容量`j`判断是否能装入第`i`个物品可以得到下面两个方程：
 $$
 dp[i][j] = \begin{cases}
 max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]\\
 dp[i - 1][j] , j \lt v[i]
 \end{cases}
 $$
+上面01背包的公式的第二条比较简单，如果背包容量不足以容纳第`i`件物品，那么只能从前`i - 1`物品当中选择了。我们来仔细分析一下第一条公式。
 
+如果当前背包容量可以容纳第`i`个物品，那么我们就可以选择第`i`件物品或者不选择，我们应该选择两种选择当中收益更大的那个。
 
+- 如果我们不选择第`i`个物品，那么我们就能够使用容量为`j`的背包去选择前`i - 1`个物品，这种情况下我们的最大收益为`dp[i - 1][j]`。
+- 如果选择第`i`个物品，那么我们背包容量还剩下`j - v[i]`，还可以选择剩下的`i - 1`个物品，而且我们的收益需要加上`w[i]`，因此我们的收益为`max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])`。
 
 ### 完全背包的动态转移方程
 
