--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -32,5 +32,5 @@ $$
 
 ## 多重背包问题解析
 
-在**多重背包**的问题当中，我们对于一种物品我们可以使用多次，比说$A$物品我们可以用三次。事实上我们可以将多重背包转化成01背包，比如我们可以将三个$A$物品变成三个不同的物品，所谓不同就是他们的名字不一样，但是他们的价值和体积都是一样的，假设$A$的体积为$V_a$，价值为$W_a$，能够使用的次数为3次，那么我们可以将其转化成$A_1$，$A_2$，$A_3$，这三个物品的体积和价值均为$V_a$和$W_a$。
+在**多重背包**的问题当中，我们对于一种物品我们可以使用多次，比说$A$物品我们可以用三次。事实上我们可以将多重背包转化成01背包，比如我们可以将三个$A$物品变成三个不同的物品，所谓不同就是他们的名字不一样，但是他们的价值和体积都是一样的，假设$A$的体积为$V_a$，价值为$W_a$，能够使用的次数为3次，那么我们可以将其转化成$A_1$，$A_2$，$A_3$，这三个物品的体积和价值均为$V_a$和$W_a$，这样的话$A$可以使用3次就转化成了$A_1$、$A_2$和$A_3均只能使用一次。通过这种转换我们就将**多重背包**转化成了**01背包**。
 
