--- a/datastructr&algorithm/04多重背包v1.md
+++ b/datastructr&algorithm/04多重背包v1.md
@@ -12,7 +12,7 @@
 
 多重背包问题跟**01背包**和**完全背包**的区别都是在物品的可用次数上，**01背包**只能使用一次，**多重背包**可用使用无数次，而**多重背包**可用使用多次。
 
-## 背包问题复习
+## 背包问题复习——01背包的动态转移方程
 
 ### 01背包的动态转移方程
 
@@ -30,7 +30,89 @@ $$
 - 如果我们不选择第`i`个物品，那么我们就能够使用容量为`j`的背包去选择前`i - 1`个物品，这种情况下我们的最大收益为`dp[i - 1][j]`。
 - 如果选择第`i`个物品，那么我们背包容量还剩下`j - v[i]`，还可以选择剩下的`i - 1`个物品，而且我们的收益需要加上`w[i]`，因此我们的收益为`max(dp[i - 1][j - v[i]] + w[i], dp[i - 1][j])`。
 
-## 多重背包问题解析
+## 将多重背包转化成01背包
 
 在**多重背包**的问题当中，我们对于一种物品我们可以使用多次，比说$A$物品我们可以用三次。事实上我们可以将多重背包转化成01背包，比如我们可以将三个$A$物品变成三个不同的物品，所谓不同就是他们的名字不一样，但是他们的价值和体积都是一样的，假设$A$的体积为$V_a$，价值为$W_a$，能够使用的次数为3次，那么我们可以将其转化成$A_1$，$A_2$，$A_3$，这三个物品的体积和价值均为$V_a$和$W_a$，这样的话$A$可以使用3次就转化成了$A_1$、$A_2$和$A_3均只能使用一次。通过这种转换我们就将**多重背包**转化成了**01背包**。
+
+**多重背包**`Java`代码：
+
+```java
+import java.util.ArrayList;
+import java.util.Scanner;
+
+public class MultiBackPack03 {
+  public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int N = scanner.nextInt();
+    int V = scanner.nextInt();
+    ArrayList<Integer> v = new ArrayList<>();
+    ArrayList<Integer> w = new ArrayList<>();
+    for (int i = 0; i < N; i++) {
+      int vi = scanner.nextInt();
+      int wi = scanner.nextInt();
+      int t = scanner.nextInt();
+      for (int j = 0; j < t; j++) {
+        v.add(vi);
+        w.add(wi);
+      }
+    }
+    int[][] dp = new int[v.size() + 1][V+ 1];
+
+    // 对第0行进行初始化操作
+    for (int i = v.get(0); i <= V; ++i) {
+      dp[0][i] = w.get(0);
+    }
+
+    for (int i = 1; i < v.size(); ++i) {
+      for (int j = 0; j <= V; ++j) {
+        if (j >= v.get(i)) {
+          dp[i][j] = Math.max(dp[i - 1][j],
+              dp[i - 1][j - v.get(i)] + w.get(i));
+        }
+        else {
+          dp[i][j] = dp[i - 1][j];
+        }
+      }
+    }
+    System.out.println(dp[v.size() - 1][V]);
+  }
+}
+```
+
+和01背包一样，我们对**多重背包**也可以使用单行数组进行优化：
+
+```java
+
+import java.util.ArrayList;
+import java.util.Scanner;
+
+public class MultiBackPack01 {
+  public static void main(String[] args) {
+    Scanner scanner = new Scanner(System.in);
+    int N = scanner.nextInt();
+    int V = scanner.nextInt();
+    ArrayList<Integer> v = new ArrayList<>();
+    ArrayList<Integer> w = new ArrayList<>();
+    for (int i = 0; i < N; i++) {
+      int vi = scanner.nextInt();
+      int wi = scanner.nextInt();
+      int t = scanner.nextInt();
+      for (int j = 0; j < t; j++) {
+        v.add(vi);
+        w.add(wi);
+      }
+    }
+    int[] f = new int[V + 1];
+    for (int i = 0; i < v.size(); i++) {
+      for (int j = V; j >= v.get(i); j--) {
+        f[j] = Math.max(f[j], f[j - v.get(i)] + w.get(i));
+      }
+    }
+    System.out.println(f[V]);
+  }
+}
+
+```
+
+## 多重背包动态转移方程
 
